# quantengine-pro

./: .dockerignore  .env.example  .gitignore  AUDIT_FIX_REPORT.md  AUDIT_FIX_REPORT_v2.md  AUDIT_REVIEW_REPORT.md  AUDIT_REVIEW_REPORT_v2.md  AUDIT_TODO.md  Dockerfile  Makefile  README.md  docker-compose.yml  findings.md  progress.md  pyproject.toml  requirements.txt  setup.py  task_plan.md
.reasonix/truncated-results/: 1780149355714-193c610d-run_command.txt
config/: data_source.yaml  execution.yaml  llm.yaml  risk_config.yaml  strategies.yaml
docs/: ARCHITECTURE.md
quantengine/: __init__.py
quantengine/analysis/: __init__.py  market_overview.py  screener.py  signal_advisor.py
quantengine/analysis/llm/: __init__.py  base.py  deepseek.py
quantengine/backtest/: __init__.py  analyzer.py  broker.py  cost_model.py  engine.py  event_bus.py  position_manager.py
quantengine/config/: __init__.py  manager.py
quantengine/data/: __init__.py  akshare_fetcher.py  base.py  cache.py  ccxt_fetcher.py  eastmoney_fetcher.py  news_fetcher.py  storage.py
quantengine/execution/: __init__.py  base.py  ccxt_client.py  executor.py  qmt_client.py  reporter.py  risk_manager.py
quantengine/factor/: __init__.py  base.py
quantengine/strategy/: __init__.py  base.py  registry.py
quantengine/strategy/builtin/: __init__.py  aberration.py  bollinger.py  (+14 more)
quantengine/utils/: __init__.py  logging.py
quantengine/web/: __init__.py  api.py  app.py  dashboard.py
scripts/: download_data.py  optimize.py  run_backtest.py  setup.sh
tests/: __init__.py  smoke_test.py  test_stress.py
