[tool.poetry]
name = "quantengine-pro"
version = "0.1.0"
description = "QuantEngine Pro - Full-featured quantitative trading system"
authors = ["QuantEngine Team"]
readme = "README.md"
packages = [{include = "quantengine"}]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
pandas = "^2.0"
numpy = "^1.24"
redis = "^5.0"
pyarrow = "^14.0"
fastparquet = "^2024.2"
openai = "^1.0"
aiohttp = "^3.9"
ccxt = "^4.0"
akshare = "^1.12"
plotly = "^5.18"
dash = "^2.14"
fastapi = "^0.109"
uvicorn = "^0.27"
websockets = "^12.0"
pydantic = "^2.0"
loguru = "^0.7"
optuna = "^3.5"
requests = "^2.31"
beautifulsoup4 = "^4.12"
lxml = "^5.1"
python-multipart = "^0.0.9"
jinja2 = "^3.1"
matplotlib = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^4.1"
black = "^24.0"
ruff = "^0.2"
mypy = "^1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
